--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">WeatherKotlin</string>
     <string name="hello_kotlin">Hello Kotlin!</string>
+    <string name="settings">Settings</string>
 </resources>
