--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">WeatherKotlin</string>
     <string name="hello_kotlin">Hello Kotlin!</string>
     <string name="settings">Settings</string>
+    <string name="city_zipcode">City Zipcode</string>
 </resources>
